commit with styled resume and index test

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title>MY COOL INDEX</title>
+	<link href="resume.css" rel="stylesheet" /> <!--DELETE THIS LATER -->
 </head>
 <body>
+
+	<h>Emai Lai's INDEX</h>
+
+	<p><img src="myphoto.jpg" alt="photo of Emai" /></p>
+
+
 
 </body>
 </html>
