--- a/resume.html
+++ b/resume.html
@@ -2,42 +2,65 @@
 <html>
 
 <head>
-	<title>Emai's Resume!</title>
+	<title>Emai's Resume</title>
 	<link href="resume.css" rel="stylesheet" />
 
 </head>
 
 
 <body>
-	<h>Emai Lai's Resume</h>
+
+	<h1>NAME:</h1>
+	<h2>Emai Lai</h2>
 
 	<h1>EDUCATION:</h1>
 	<h2>Tufts University, School of Engineering</h2>
-	<h3>B.S. Human Factors Engineering |
-	Minors: Computer Science, Film and Media Studies</h3>
+	<h3>B.S. Human Factors Engineering, Computer Science Minor, Film and Media Studies Minor (Expected May 2021)</h3>
 
-	<p>Introduction to Computer Science with C++, Data Structures, Introduction to MATLAB, Discrete Math, Web Programming, Music and Art of Engineering, Computer-Interface Design, Cinematic 3D</p>
+	<p>Courses: Introduction to Computer Science with C++, Data Structures, Introduction to MATLAB, Discrete Math, Web Programming, Music and Art of Engineering, Computer-Interface Design, Cinematic 3D</p>
 
 
 	<h1>PROFESSIONAL EXPERIENCE:</h1>
 
 	<h2>Phillips Academy Andover</h2>
 	<h3>PALS Math Instructor</h3>
-	<p>-Developed a 4-week curriculum and led an accelerated 8th grade class in Algebra 1; responsibilities included assembling homework assignments, grading exams, demonstrating examples, and planning in-class activities
-	- Produced promotional videos for the program including a mini-documentary featured on the PALS website
-	</p>
+	<p>- Developed a 4-week curriculum and led an accelerated 8th grade class in Algebra 1; responsibilities included assembling homework assignments, grading exams, demonstrating examples, and planning in-class activities</p>
+	<p>- Produced promotional videos for the program including a mini-documentary featured on the PALS website</p>
 
+
+	<h2>Holt Creative Media</h2>
+	<h3>Co-founder, Photographer & Videographer</h3>
+	<p>- Shot and edited 100+ senior portraits and family portraits</p>
+	<p>- Designed frequently-visited website (using Wix) to showcase photo and video work</p>
+	<p>- Produced dozens of video projects including documentary-style interviews, event highlight reels, music videos, short films, etc.
+	</p>
 
 
 
 
 	<h1>ACTIVITIES:</h1>
 
+	<h2>Institute Sketch Comedy</h2>
+	<h3>Filmmaker, Head of Video</h3>
+	<p>- Produce, direct, film, and edit 3+ video sketches per semester</p>
+	<p>- Document live shows</p>
+
+	<h2>Tufts University Television</h2>
+	<h3>Member</h3>
+	<p>- Lead creative production of music video series</p>
+	<p>- Assist production for 10-episode web series</p>
+
+	<h2>Tufts Public Harmony</h2>
+	<h3>Student Musician</h3>
+	<p>- Perform piano covers and self-arranged medleys at children's hospitals and nursing homes</p>
+
+
+
 	<h1>SKILLS:</h1>
-
-
-
-
+	<h2>C++, MATLAB</h2>
+	<h2>Adobe Premiere Pro, Photoshop, Illustrator</h2>
+	<h2>Sketch</h2>
+	<h2>Wordpress, Wix</h2>
 
 
 
