index with photo attempt

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<h>Emai Lai's INDEX</h>
 
-	<p><img src="myphoto.jpg" alt="photo of Emai" /></p>
+	<img src="myphoto.JPG" alt="photo of Emai" />
 
 
 
