index with link to resume

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 	<img src="myphoto.JPG" alt="photo of Emai" />
 
 
+	<p>some text cool yeah</p>
+
+	 <p><a href="http://emai-lai.github.io/resume.html" target="_blank">To see my RESUME, click here</a></p>
+
+
 
 </body>
 </html>
