--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
 <head>
 	<title>MY COOL INDEX</title>
-	<link href="resume.css" rel="stylesheet" /> <!--DELETE THIS LATER -->
+	<link href="index.css" rel="stylesheet" /> <!--DELETE THIS LATER -->
 </head>
 <body>
 
-	<h>Emai Lai's INDEX</h>
+	<h1>EMAI LAI'S PROFILE</h1>
 
-	<img src="myphoto.JPG" alt="photo of Emai" />
+	<h4><img class="resize" src="myphoto.JPG" alt="photo of Emai" /></h4>
 
 
-	<p>some text cool yeah</p>
+	<h2>Hi! I'm Emai. I'm currently enrolled in COMP-20 at Tufts University</h2>
 
-	 <p><a href="http://emai-lai.github.io/resume.html" target="_blank">To see my RESUME, click here</a></p>
+	<h4><a href="http://emai-lai.github.io/resume.html" target="my resume">To see my RESUME, click here</a></h4>
+
+	<h4><a href="http://emai-lai.github.io/bio.html" target="my bio">To see my BIO, click here</a></h4>
 
 
 
