final style and content changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>MY COOL INDEX</title>
-	<link href="index.css" rel="stylesheet" /> <!--DELETE THIS LATER -->
+	<meta charset="utf-8" />
+	<link href="resume.css" rel="stylesheet" /> 
 </head>
 <body>
 
@@ -11,7 +12,7 @@
 	<h4><img class="resize" src="myphoto.JPG" alt="photo of Emai" /></h4>
 
 
-	<h2>Hi! I'm Emai. I'm currently enrolled in COMP-20 at Tufts University</h2>
+	<h4>Hi! I'm Emai. I'm currently enrolled in COMP-20 at Tufts University</h4>
 
 	<h4><a href="http://emai-lai.github.io/resume.html" target="my resume">To see my RESUME, click here</a></h4>
 
