--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Emai's Resume</title>
+	<meta charset="utf-8" />
 	<link href="resume.css" rel="stylesheet" />
 
 </head>
@@ -11,13 +12,17 @@
 <body>
 
 	<h1>NAME:</h1>
+
 	<h2>Emai Lai</h2>
 
+
+
 	<h1>EDUCATION:</h1>
+
 	<h2>Tufts University, School of Engineering</h2>
 	<h3>B.S. Human Factors Engineering, Computer Science Minor, Film and Media Studies Minor (Expected May 2021)</h3>
-
 	<p>Courses: Introduction to Computer Science with C++, Data Structures, Introduction to MATLAB, Discrete Math, Web Programming, Music and Art of Engineering, Computer-Interface Design, Cinematic 3D</p>
+
 
 
 	<h1>PROFESSIONAL EXPERIENCE:</h1>
@@ -27,14 +32,12 @@
 	<p>- Developed a 4-week curriculum and led an accelerated 8th grade class in Algebra 1; responsibilities included assembling homework assignments, grading exams, demonstrating examples, and planning in-class activities</p>
 	<p>- Produced promotional videos for the program including a mini-documentary featured on the PALS website</p>
 
-
 	<h2>Holt Creative Media</h2>
 	<h3>Co-founder, Photographer & Videographer</h3>
 	<p>- Shot and edited 100+ senior portraits and family portraits</p>
-	<p>- Designed frequently-visited website (using Wix) to showcase photo and video work</p>
+	<p>- Designed portfolio website (using Wix) to showcase photo and video work</p>
 	<p>- Produced dozens of video projects including documentary-style interviews, event highlight reels, music videos, short films, etc.
 	</p>
-
 
 
 
@@ -57,6 +60,7 @@
 
 
 	<h1>SKILLS:</h1>
+
 	<h2>C++, MATLAB</h2>
 	<h2>Adobe Premiere Pro, Photoshop, Illustrator</h2>
 	<h2>Sketch</h2>
